Se solucionaron problemas con el formato A y el frontend
solucion de problemas