@@ -37,6 +37,7 @@ public class FormatoAService  {
         }
 
         // Campos simples
+        formatoA.asignarId(request.id());
         formatoA.actualizarTituloD(request.title());
         formatoA.actualizarModo(request.mode());
         formatoA.actualizarGeneralObjective(request.generalObjetive());
@@ -46,10 +47,29 @@ public class FormatoAService  {
         formatoA.actualizarCounter(request.counter());
 
         // Director y codirector
+        System.out.println("🔍 Buscando director con email: " + request.projectManagerEmail());
         Persona director = personaRepo.findByEmail(request.projectManagerEmail()).orElse(null);
-        Persona codirector = personaRepo.findByEmail(request.projectCoManagerEmail()).orElse(null);
+        System.out.println("👤 Director encontrado: " + (director != null));
+        if (director != null) {
+            System.out.println("✅ Director ID: " + director.getIdUsuario());
+            System.out.println("✅ Director Email: " + director.getEmail());
+            System.out.println("✅ Director Roles: " + director.getRoles());
+            System.out.println("✅ Es DOCENTE? " + director.tieneRol(EnumRol.DOCENTE));
+        }
 
+        System.out.println("🔍 Buscando codirector con email: " + request.projectCoManagerEmail());
+        Persona codirector = personaRepo.findByEmail(request.projectCoManagerEmail()).orElse(null);
+        System.out.println("👤 Codirector encontrado: " + (codirector != null));
+        if (codirector != null) {
+            System.out.println("✅ Codirector ID: " + codirector.getIdUsuario());
+            System.out.println("✅ Codirector Email: " + codirector.getEmail());
+            System.out.println("✅ Codirector Roles: " + codirector.getRoles());
+            System.out.println("✅ Es DOCENTE? " + codirector.tieneRol(EnumRol.DOCENTE));
+        }
+
+        System.out.println("🔄 ASIGNANDO DIRECTOR...");
         formatoA.asignarManagerD(director);
+        System.out.println("🔄 ASIGNANDO CODIRECTOR...");
         formatoA.asignarCoManagerD(codirector);
 
         // Estudiantes
@@ -64,7 +84,9 @@ public class FormatoAService  {
 
         formatoA.validarYAsignarEstadoInicialD(EnumEstado.ENTREGADO);
 
-        return formatoARepo.save(formatoA);
+        formatoARepo.save(formatoA);
+
+        return formatoA;
      }
 
 
@@ -74,14 +96,16 @@ public class FormatoAService  {
         if (opt.isEmpty()) return Optional.empty();
 
         FormatoA formato = opt.get();
+        formato.asignarEstado(newState);
+        formato.asignarObservaciones(observations);
 
-        switch (newState) {
-            case APROBADO -> formato.aprobar();
-            case RECHAZADO -> formato.rechazar(observations);
-            default -> throw new IllegalStateException("Estado no permitido");
+        if(newState==EnumEstado.RECHAZADO){
+            formato.actualizarCounter(formato.getCounter()+1);
         }
+        formatoARepo.save(formato);
 
-        return Optional.of(formatoARepo.save(formato));
+        return Optional.of(formato);
+
     }
 
 
@@ -91,15 +115,22 @@ public class FormatoAService  {
 
 
     public List<FormatoA> listarPorPrograma(String programa) {
-        return formatoARepo.findAll().stream()
-                .filter(f -> !f.getEstudiantes().isEmpty())
-                .filter(f -> f.getEstudiantes().get(0).getPrograma().equalsIgnoreCase(programa))
-                .toList();
+       List<FormatoA>  todosFormatos = formatoARepo.findAll();
+       //Filtrar solo los que tengan a menos un estudiante;
+        return todosFormatos.stream()
+                .filter(formato -> !formato.getEstudiantes().isEmpty())
+                .filter(formato ->{
+                    Persona primerEstudainte = formato.getEstudiantes().get(0);
+                    return primerEstudainte.getPrograma() != null &&
+                            primerEstudainte.getPrograma().equalsIgnoreCase(programa);
+                })
+                .collect(Collectors.toList());
     }
 
 
-    public Optional<FormatoA> findById(Long id) {
-        return formatoARepo.findById(id);
+    public FormatoA findById(Long id) {
+        return formatoARepo.findById(id).orElse(null);
     }
+
 
 }
